--- a/traefik/config/dynamic.yml
+++ b/traefik/config/dynamic.yml
@@ -1,4 +1,7 @@
 tls:
+  # certificates:
+  #   - certFile: "/etc/certs/enumverse.dev.pem"
+  #     keyFile: "/etc/certs/enumverse.dev-key.pem"
   certificates:
     - certFile: "/etc/certs/_wildcard.enumverse.dev.pem"
       keyFile: "/etc/certs/_wildcard.enumverse.dev-key.pem"
