--- a/app/stack.yml
+++ b/app/stack.yml
@@ -169,55 +169,63 @@ services:
       - enumverse_frontend_net
 
 
-  # idm_api:
-  #   image: nginx:latest
-  #   <<: *web-healthcheck
-  #   deploy:
-  #     resources:
-  #       limits:
-  #         cpus: "0.20"
-  #         memory: 256M
-  #     mode: replicated
-  #     replicas: 2
-  #     update_config:
-  #       failure_action: rollback
-  #       order: start-first
-  #       delay: 10s
-  #     rollback_config:
-  #       parallelism: 1
-  #       delay: 10s
-  #       monitor: 10s
-  #     restart_policy:
-  #       condition: on-failure
-  #       delay: 10s
-  #       max_attempts: 5
-  #       window: 60s
-  #     labels:
-  #       - "traefik.enable=true"
-  #       - "traefik.http.routers.webapp.rule=Host(`enumverse.dev/identity`)"
-  #       - "traefik.http.routers.webapp.entrypoints=websecure"
-  #       - "traefik.http.routers.webapp.tls=true"
-  #       - "traefik.http.services.webapp.loadbalancer.server.port=8080"
-  #   environment:
-  #     - POSTGRES_DB_URL=${IDM_API_DB_URL:?ERROR IDM_API_DB_URL NOT SET}
-  #     - POSTGRES_USERNAME=${IDM_API_USERNAME:?ERROR IDM_API_USERNAME NOT SET}
-  #     - POSTGRES_PASSWORD=${IDM_API_PASSWORD:?ERROR IDM_API_PASSWORD NOT SET}
-  #     - PULSAR_SERVICE_URL=${PULSAR_URL:?ERROR PULSAR_URL NOT SET}
-  #     - PROFILE=${PROFILE:-prod}
-  #     - KEYCLOAK_USERNAME=${KEYCLOAK_USERNAME:?ERROR KEYCLOAK_USERNAME NOT SET}
-  #     - KEYCLOAK_PASSWORD=${KEYCLOAK_PASSWORD:?ERROR KEYCLOAK_PASSWORD NOT SET}
-  #     - KEYCLOAK_REALM=${KEYCLOAK_REALM:?ERROR KEYCLOAK_REALM NOT SET}
-  #     - KEYCLOAK_SERVER_URL=${KEYCLOAK_SERVER_URL:?ERROR KEYCLOAK_SERVER_URL NOT SET}
-  #     - KEYCLOAK_BASE_CLIENT=${KEYCLOAK_REALM:?ERROR KEYCLOAK_REALM NOT SET}
-  #     - KEYCLOAK_CLIENT_ID=${KEYCLOAK_CLIENT_ID:?ERROR KEYCLOAK_CLIENT_ID NOT SET}
-  #     - KEYCLOAK_CLIENT_SECRET=${KEYCLOAK_CLIENT_SECRET:?ERROR KEYCLOAK_CLIENT_SECRET NOT SET}
-  #     - SUPER_ADMIN_EMAIL=${SUPER_ADMIN_EMAIL:?ERROR SUPER_ADMIN_EMAIL NOT SET}
-  #     - SUPER_ADMIN_PASSWORD=${SUPER_ADMIN_PASSWORD:?ERROR SUPER_ADMIN_PASSWORD NOT SET}
-  #     - SUPER_ADMIN_FIRSTNAME=${SUPER_ADMIN_FIRSTNAME:?ERROR SUPER_ADMIN_FIRSTNAME NOT SET}
-  #     - SUPER_ADMIN_LASTNAME=${SUPER_ADMIN_LASTNAME:?ERROR SUPER_ADMIN_LASTNAME NOT SET}
-  #     - ENUM_BACKEND_BASE_URL=${ENUM_BACKEND_BASE_URL:?ERRORENUM_BACKEND_BASE_URL IS NOT SET} 
-  #   networks:
-  #     - enumverse_frontend_net
+  idm_api:
+    image: ${IDM_API_IMAGE:?ERROR IDM_API_IMAGE NOT SET}
+    deploy:
+      resources:
+        limits:
+          cpus: "0.50"
+          memory: 1G
+      mode: replicated
+      replicas: 2
+      update_config:
+        failure_action: rollback
+        order: start-first
+        delay: 10s
+      rollback_config:
+        parallelism: 1
+        delay: 10s
+        monitor: 10s
+      restart_policy:
+        condition: on-failure
+        delay: 10s
+        max_attempts: 5
+        window: 60s
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.idm_api.entrypoints=websecure"
+        - "traefik.http.routers.idm_api.tls=true"
+        - "traefik.http.routers.idm_api.rule=Host(`enumverse.dev`) && PathPrefix(`/identity/`)"
+        # - "traefik.http.routers.idm_api.rule=Host(`enumverse.dev/identity`)"
+        - "traefik.http.services.idm_api.loadbalancer.server.port=8080"
+        # - "traefik.http.routers.idm_api.middlewares=idmstripprefix"
+        # - "traefik.http.middlewares.idmstripprefix.stripprefix.prefixes=/identity"
+        # - "traefik.http.routers.idm_api.middlewares=idmaddprefix"
+        # - "traefik.http.middlewares.idmstripprefix.idmaddprefix.prefixes=/api/v2"
+        - "traefik.http.routers.idm_api.middlewares=idmreplacepathregex"
+        - "traefik.http.middlewares.idmreplacepathregex.replacepathregex.regex=^/identity/(.*)"
+        - "traefik.http.middlewares.idmreplacepathregex.replacepathregex.replacement=^/api/v2/$$1"
+    environment:
+      - POSTGRES_DB_URL=${IDM_DB_URL:?ERROR IDM_DB_URL NOT SET}
+      - POSTGRES_USERNAME=${IDM_DB_USERNAME:?ERROR IDM_DB_USERNAME NOT SET}
+      - POSTGRES_PASSWORD=${IDM_DB_PASSWORD:?ERROR IDM_DB_PASSWORD NOT SET}
+      - PULSAR_SERVICE_URL=${IDM_PULSAR_URL:?ERROR IDM_PULSAR_URL NOT SET}
+      - PROFILE=${API_PROFILE:-prod}
+      - KEYCLOAK_USERNAME=${IDM_KEYCLOAK_USERNAME:?ERROR IDM_KEYCLOAK_USERNAME NOT SET}
+      - KEYCLOAK_PASSWORD=${IDM_KEYCLOAK_PASSWORD:?ERROR IDM_KEYCLOAK_PASSWORD NOT SET}
+      - KEYCLOAK_REALM=${IDM_KEYCLOAK_REALM:?ERROR IDM_KEYCLOAK_REALM NOT SET}
+      - KEYCLOAK_SERVER_URL=${IDM_KEYCLOAK_SERVER_URL:?ERROR IDM_KEYCLOAK_SERVER_URL NOT SET}
+      - KEYCLOAK_BASE_CLIENT=${IDM_KEYCLOAK_REALM:?ERROR IDM_KEYCLOAK_REALM NOT SET}
+      - KEYCLOAK_CLIENT_ID=${IDM_KEYCLOAK_CLIENT_ID:?ERROR IDM_KEYCLOAK_CLIENT_ID NOT SET}
+      - KEYCLOAK_CLIENT_SECRET=${IDM_KEYCLOAK_CLIENT_SECRET:?ERROR IDM_KEYCLOAK_CLIENT_SECRET NOT SET}
+      - SUPER_ADMIN_EMAIL=${IDM_SUPER_ADMIN_EMAIL:?ERROR IDM_SUPER_ADMIN_EMAIL NOT SET}
+      - SUPER_ADMIN_PASSWORD=${IDM_SUPER_ADMIN_PASSWORD:?ERROR IDM_SUPER_ADMIN_PASSWORD NOT SET}
+      - SUPER_ADMIN_FIRSTNAME=${IDM_SUPER_ADMIN_FIRSTNAME:?ERROR IDM_SUPER_ADMIN_FIRSTNAME NOT SET}
+      - SUPER_ADMIN_LASTNAME=${IDM_SUPER_ADMIN_LASTNAME:?ERROR IDM_SUPER_ADMIN_LASTNAME NOT SET}
+      - ENUM_BACKEND_BASE_URL=${IDM_ENUM_BACKEND_BASE_URL:?ERROR IDM_ENUM_BACKEND_BASE_URL IS NOT SET} 
+      - SUPPORT_EMAIL=${IDM_SUPPORT_EMAIL:?ERROR IDM_SUPPORT_EMAIL NOT SET}
+    networks:
+      - enumverse_frontend_net
 
 
   api:
@@ -268,9 +276,12 @@ services:
       POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256"
       PGUSER: ${PGUSER?[ERROR] PGUSER NOT SET}
       PGPASSWORD: ${PGPASSWORD?[ERROR] PGPASSWORD NOT SET}
+      KC_DB_DATABASE: ${KC_DB_DATABASE:?ERROR KC_DB_DATABASE NOT SET}
       KC_DB_PASSWORD: ${KC_DB_PASSWORD:?ERROR KC_DB_PASSWORD NOT SET}
-      KC_DB_NAME: ${KC_DB_NAME:?ERROR KC_DB_NAME NOT SET}
       KC_DB_USERNAME: ${KC_DB_USERNAME:?ERROR KC_DB_USERNAME NOT SET}
+      IDM_DB_DATABASE: ${IDM_DB_DATABASE:?ERROR IDM_DB_DATABASE NOT SET}
+      IDM_DB_PASSWORD: ${IDM_DB_PASSWORD:?ERROR IDM_DB_PASSWORD NOT SET}
+      IDM_DB_USERNAME: ${IDM_DB_USERNAME:?ERROR IDM_DB_USERNAME NOT SET}
     command: |
       postgres 
       -c wal_level=replica 
@@ -304,7 +315,7 @@ services:
   pgpool:
     image: pgpool/pgpool:4.0.23
     ports: # Does not need to be exposed to host only apps on the same docker network
-      - 9999
+      - :${PGPOOL_PARAMS_PORT:?[ERROR] PGPOOL_PARAMS_PORT NOT SET}
     environment:
       - TZ=Africa/Lagos
       - PGPOOL_PARAMS_BACKEND_HOSTNAME0=pg0
@@ -324,18 +335,20 @@ services:
       - PGPOOL_PARAMS_SR_CHECK_PASSWORD=${PGPASSWORD?[ERROR] PGPASSWORD NOT SET} 
       - PGPOOL_PARAMS_HEALTH_CHECK_PERIOD=10
       - PGPOOL_PARAMS_HEALTH_CHECK_USER=${POSTGRES_USER?[ERROR] POSTGRES_USER NOT SET} 
+      - PGPOOL_PARAMS_PORT=${PGPOOL_PARAMS_PORT:?[ERROR] PGPOOL_PARAMS_PORT NOT SET} 
       - PGPOOL_ENABLE_POOL_PASSWD=true
       - PGPOOL_PASSWORD_ENCRYPTION_METHOD=scram-sha-256
       - PGPOOL_SKIP_PASSWORD_ENCRYPTION=false
       - PGPOOL_PCP_USER="${PGUSER:?ERROR PGUSER NOT SET}"
       - PGPOOL_PCP_PASSWORD="${PGPASSWORD:?ERROR PGPASSWORD NOT SET}"
-      
       # Postgres 
       - POSTGRES_USERNAME=${POSTGRES_USER?[ERROR] POSTGRES_USER NOT SET} 
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD?[ERROR] POSTGRES_PASSWORD NOT SET}
       # Keycloak Connection Details
       - KEYCLOAK_USERNAME=${KC_DB_USERNAME:?ERROR KC_DB_USERNAME NOT SET}
       - KEYCLOAK_PASSWORD=${KC_DB_PASSWORD:?ERROR KC_DB_PASSWORD NOT SET}
+      - IDM_USERNAME=${IDM_DB_USERNAME:?ERROR IDM_DB_USERNAME NOT SET}
+      - IDM_PASSWORD=${IDM_DB_PASSWORD:?ERROR IDM_DB_PASSWORD NOT SET}
       # - ${CONF_VOLUME_PGPOOL?ERROR CONF_VOLUME_PGPOOL NOT SET}:/docker-entrypoint-initdb.d
     networks:
       - enumverse_postgres_net
